# roboagent-guard

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  SKILL.md  pyproject.toml  render.yaml
docs/: api.md  architecture.md  completion-report.md  decision-policy.md  demo-script.md  deployment.md  implementation-plan.md  limitations.md  nanda-integration.md  skill-agent-test.md  submission-checklist.md  technical-report.md  threat-model.md  video-demo-script.md
scenarios/: combined_safety_privacy_crisis.yaml  hidden_low_slam_confidence.yaml  low_light_high_speed.yaml  low_light_slow_motion.yaml  normal_navigation.yaml  person_in_private_zone.yaml  replayed_approved_action.yaml  slam_degradation.yaml  unauthorized_camera_request.yaml  uneven_surface_high_blur.yaml
scripts/: generate_nanda_trace.py  run_demo.py  run_judge_test.py  smoke_test_live.py  verify_audit_chain.py  verify_determinism.py
src/roboagent_guard/: __init__.py  app.py  config.py  dependencies.py
src/roboagent_guard/agents/: authorization.py  physical_risk.py  privacy.py  slam_reliability.py  supervisor.py
src/roboagent_guard/audit/: hashing.py  store.py  verification.py
src/roboagent_guard/discovery/: agent_card.py
src/roboagent_guard/models/: audit.py  (+4 more)
static/: index.html
tests/: conftest.py
tests/adversarial/: test_attacks.py
tests/api/: test_endpoints.py
tests/determinism/: test_determinism.py
tests/e2e/: test_audit_and_skill.py
tests/integration/: test_scenarios.py
tests/property/: test_scoring_properties.py
tests/unit/: test_models_and_agents.py
(+13 files in other folders)
