[project]
name = "roboagent-guard"
version = "1.0.0"
description = "Agent-usable robot safety and privacy guard with deterministic digital twins."
readme = "README.md"
authors = [
    { name = "Subhash", email = "subhashc.iisc@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "typer>=0.26.8",
    "uvicorn[standard]>=0.50.0",
]

[project.scripts]
roboagent-guard = "roboagent_guard.app:main"

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "hypothesis>=6.156.1",
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--strict-markers"

[tool.coverage.run]
branch = true
source = ["roboagent_guard"]

[tool.coverage.report]
show_missing = true
fail_under = 85

[tool.pyright]
include = ["src", "tests", "scripts"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportMissingTypeStubs = false
